--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,17 +1,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.itsaverse.app.SettingsActivity.SettingsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.annoverse.app.SettingsActivity$PlaceholderFragment">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/settings_intro_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="#222"
+        android:textSize="18dp"
+        android:text="@string/settings_intro"/>
 
     <Button
-        android:id="@+id/start_service_button"
-        android:text="Start Service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/settings_stop_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/settings_intro_label"
+        android:textColor="#f0f0f0"
+        android:textSize="15dp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/settings_turn_off"
+        android:background="@drawable/selector_grey"/>
 
 </RelativeLayout>
