--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.annoverse.app.SettingsActivity" >
+    tools:context="com.itsaverse.app.SettingsActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
