Adding click overlay and basic click listeners. Fun stuff.

--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -21,4 +21,10 @@
         android:scaleType="centerCrop"
         android:background="@android:color/transparent"/>
 
+    <com.itsaverse.app.views.ClickableRectView
+        android:id="@+id/image_viewer_click_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"/>
+
 </RelativeLayout>
