--- a/app/src/main/res/layout/loading_indicator_layout.xml
+++ b/app/src/main/res/layout/loading_indicator_layout.xml
@@ -21,7 +21,7 @@
             android:id="@+id/loading_indicator_image"
             android:layout_width="33dp"
             android:layout_height="33dp"
-            android:src="@drawable/loading_icon"/>
+            android:src="@drawable/itsaverse_overlay_icon"/>
 
         <TextView
             android:layout_width="wrap_content"
