Adding MediaProjection components; bumped min version to 21 for now

--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.itsaverse.app.views.ScreenShotImageView
+    <com.itsaverse.app.views.ScreenShotHighlightView
         android:id="@+id/image_viewer_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:background="#88000000"/>
 
-    <com.itsaverse.app.views.ScreenShotImageView
+    <com.itsaverse.app.views.ScreenShotHighlightView
         android:id="@+id/image_viewer_overlay_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
